# USDF-contracts

./: Cargo.toml  Dockerfile  README.md  build-docker.sh
exchange_contract/: Cargo.toml  README.md
exchange_contract/src/: errors.rs  events.rs  ext_self.rs  lib.rs  management.rs  on_transfer.rs  owner.rs  user.rs  verifier.rs  view.rs  withdraws.rs
res/: contract.wasm  exchange_contract.wasm
staking_contract/: README.md
