[package]
name = "exchange_contract"
description = "exchange contract for USDF"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"
near-sdk-contract-tools = "3.0.2"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "serde",
    "std",
] }
rlp = "0.6.1"
sha2 = "0.10.8"